--- a/app/styles/sass/blocks/hero.sass
+++ b/app/styles/sass/blocks/hero.sass
@@ -2,7 +2,7 @@
 	background-position: center center
 	background-repeat: no-repeat
 	background-size: cover
-	min-height: 756px
+	min-height: 100vh
 	display: flex
 	justify-content: center
 	align-items: center
