--- a/app/styles/sass/blocks/signup.sass
+++ b/app/styles/sass/blocks/signup.sass
@@ -4,11 +4,16 @@
 		justify-content: center
 		align-items: center
 		.signup-center
-			max-width: 439px
+			
 			margin-top: 32px
 			margin-bottom: 32px
 			@media screen and(min-width: 768px)
 				min-width: 439px
+			@media screen and(max-width: 768px)
+				max-width: 439px
+			@media screen and(max-width: 480px)
+				max-width: 320px
+
 			.signup-text
 				color: #000
 				font-size: 12px
